# order-processing-service

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  verify_process_order.py
src/app/core/orders/entities/: Order.py
src/app/core/origin/entities/: abstract_factory.py  abstract_service.py  abstract_usecase.py  base_class.py
src/app/core/origin/exceptions/: AppException.py  __init__.py
src/app/core/origin/interfaces/: UsecaseAuthorizationService.py
src/app/core/origin/schemas/: ServiceDependency.py  ServiceInput.py  ServiceOutput.py  ServiceStatus.py  User.py  __init__.py
src/app/infra/dotenv/entities/: dotenv.py
src/app/infra/dotenv/services/: service_dotenv.py
src/app/infra/event_processors/entities/: AbstractEventProcessor.py
src/app/infra/events/entities/: abstract_event_processor.py  event.py
src/app/infra/logger/contracts/: logger_service_contract_v0.py
src/app/infra/logger/interfaces/: logger_service.py
src/app/infra/logger/services/: service_logger.py
src/app/infra/message_broker/contracts/: kafka_consumer_adapter_v0.py
src/app/infra/message_broker/entities/: abstract_consumer_adapter.py
src/app/infra/message_broker/functions/: start_consume_message_from_kafka.py  stop_consume_message_from_kafka.py
src/app/infra/message_broker/interfaces/: consumer_service.py
src/framework/entrypoints/: server.py
src/framework/entrypoints/api/: routes.py
src/framework/helpers/: api_response.py
src/framework/middlewares/: debugger.py  route_error_handler.py
tests/: conftest.py
(+37 files in other folders)
